syntax = "proto3";

package protoCommonV1;

enum TaskType {
    UNKNOWN = 0;
    Intermediate = 1;
    Leaf = 2;
}

enum RequestType {
    Data = 0;
    Metadata = 1;
}

message TaskRequest {
    string parentTaskID = 1;
    TaskType type = 2;
    RequestType requestType = 3;
    bytes physicalPlan = 4;
    bytes payload = 5;
}

message TaskResponse {
    string taskID = 1;
    TaskType type = 2;
    bool completed = 3;
    string errMsg = 4;
    int64 sendTime = 5;
    bytes payload = 6;
    bytes stats = 7;
}

message TimeSeriesList {
    repeated TimeSeries timeSeriesList = 1;
    repeated AggregatorSpec fieldAggSpecs = 2;
}

message TimeSeries {
    string tags = 1; // tag values contact string
    map<string, bytes> fields = 2;
}

message AggregatorSpec {
    string fieldName = 1;
    uint32 fieldType = 2;
    repeated uint32 funcTypeList = 3;
}

service TaskService {
    rpc Handle (stream TaskRequest) returns (stream TaskResponse) {
    }
}
